fix: overflow-dashboard, domains, select year

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,19 @@
     @apply bg-background text-foreground;
   }
 }
+
+.hideScroll {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+.hideScroll::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.break-words {
+  overflow-wrap: break-word;
+}
+
+.text-wrap {
+  white-space: pre-wrap;
+}
